[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-oversight"
version = "0.1.4"
description = "Python SDK for Sentinel human-in-the-loop oversight"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Christopher Sellers / RegEngine, Inc." }]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
]

[project.urls]
Homepage = "https://pauseapi.app"
Repository = "https://github.com/PetrefiedThunder/sentinel-sdk"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]
