[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentinel-oversight"
version = "0.1.9"
description = "Python SDK for Sentinel human-in-the-loop oversight"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Christopher Sellers / RegEngine, Inc." }]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
# Adapter extras. Only langchain has a hard third-party import
# (sentinel/adapters/langchain.py needs langchain_core); the openai-agents and
# semantic-kernel adapters intentionally have no runtime dependency on their
# host frameworks, so they need no extra. README only advertises [langchain].
langchain = ["langchain-core>=0.3"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "ruff==0.7.4",  # pinned to match .pre-commit-config.yaml so CI and pre-commit agree
]

[project.urls]
Homepage = "https://pauseapi.app"
Repository = "https://github.com/PetrefiedThunder/sentinel-sdk"

[tool.hatch.build.targets.wheel]
packages = ["sentinel"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["dist", "build", ".venv", "tests/fixtures"]

[tool.ruff.lint]
# Sensible default — pyflakes, pycodestyle, isort, bugbear, comprehensions
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM", "TCH"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI uses Depends() in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # assert False in tests is fine

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "sentinel/__init__.py:__version__",
    "sentinel/client.py:USER_AGENT",
]
branch = "main"
upload_to_pypi = false  # GH Actions publish.yml handles PyPI via OIDC
upload_to_release = false  # SBOM workflow attaches release assets
build_command = "python -m pip install build && python -m build"
commit_message = "chore(release): {version}\n\n{changelog}"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "build", "ci", "test", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]
